tests/sad_expected_end_after_begin.msh
// error: line 10: near: ';': Expected 'END' at the end of block
// Compilation error
DECLR
	x: int;
	a: int;
	b: int;
BEGIN
	x := 1;
	a := x;
	b := 2;
